assets/css/style.css
body {
	
   -webkit-transition: margin-bottom .2s; /* Safari */
    transition: margin-bottom .2s;
}

.footer2 {
	height:120px;
	bottom:80px;
   -webkit-transition: height .2s; /* Safari */
   transition: height .2s;
}

#chat p {
	margin-bottom:0px;
	line-height:22px;
}

.chatName {
	font-weight:bold;
}

#chat p:not(.chatName) {
	margin-left:20px;
}

.footer div .form-group {
	margin-top: 20px;
}


/*overflow: scroll;*/
#chat {
	overflow-y: scroll;
}

.footerCollapsed {
  /* CSS for the collapsed footer! Yay!*/
  height: 0px;
}


.bodyCollapsed {
  /* CSS for the collapsed footer! Yay!*/
  margin-bottom: 60px; /* Margin bottom by footer height */
}

